--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.2",
     "next": "14.2.10",
     "next-themes": "^0.3.0",
     "react": "^18",
