--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.5.4",
     "highlight.js": "^11.10.0",
     "lucide-react": "^0.441.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
     "next": "14.2.10",
